--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#home" class="nav-link">首页</a></li>
                 <li><a href="#about" class="nav-link">关于</a></li>
                 <li><a href="#articles" class="nav-link">文章</a></li>
+                <li><a href="#comments" class="nav-link">评论</a></li>
                 <li><a href="#contact" class="nav-link">联系</a></li>
             </ul>
             <div class="hamburger">
@@ -103,6 +104,39 @@
                             <a href="#" class="read-more">阅读更多</a>
                         </div>
                     </article>
+                </div>
+            </div>
+        </section>
+
+        <!-- 评论区域 -->
+        <section id="comments" class="comments">
+            <div class="container">
+                <h2 class="section-title">评论区</h2>
+                <div class="comments-content">
+                    <!-- 评论表单 -->
+                    <div class="comment-form">
+                        <h3>发表评论</h3>
+                        <form id="commentForm">
+                            <div class="form-group">
+                                <input type="text" id="commentName" placeholder="您的姓名" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" id="commentEmail" placeholder="邮箱地址" required>
+                            </div>
+                            <div class="form-group">
+                                <textarea id="commentText" placeholder="写下您的评论..." rows="4" required></textarea>
+                            </div>
+                            <button type="submit" class="submit-btn">发表评论</button>
+                        </form>
+                    </div>
+                    
+                    <!-- 评论列表 -->
+                    <div class="comments-list">
+                        <h3>评论 (<span id="commentCount">0</span>)</h3>
+                        <div id="commentsContainer">
+                            <!-- 评论将通过JavaScript动态加载 -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
